--- a/app/src/main/res/layout/fragment_completed.xml
+++ b/app/src/main/res/layout/fragment_completed.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".ui.notifications.MyListFragment">
+    tools:context=".ProfileFragment">
 
     <ImageView
         android:id="@+id/topHolder"
@@ -17,26 +18,27 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/titlePlaying2"
+        android:id="@+id/titlePlaying"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Playing"
         android:textSize="14sp"
-        android:textColor="@color/azul"
-        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="@id/topHolder"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/titleCompleted"
         app:layout_constraintBottom_toBottomOf="@id/topHolder"/>
+
     <TextView
         android:id="@+id/titleCompleted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Completed"
+        android:textStyle="bold"
         android:textSize="14sp"
-        android:textColor="@color/white"
+        android:textColor="@color/azul"
         app:layout_constraintTop_toTopOf="@id/topHolder"
-        app:layout_constraintStart_toEndOf="@id/titlePlaying2"
+        app:layout_constraintStart_toEndOf="@id/titlePlaying"
         app:layout_constraintEnd_toStartOf="@id/titleDropped"
         app:layout_constraintBottom_toBottomOf="@id/topHolder"/>
 
