--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,185 +30,238 @@
 
     <!--Imagen de perfil del usuario-->
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/roundedProfileImageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/circular" />
-
-    <TextView
-        android:id="@+id/txt_nickname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:maxLines="1"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/roundedProfileImageView"
-        tools:text="Nickname"/>
-    <ImageView
-        android:id="@+id/icon_editNickname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_edit_square"
-        android:layout_marginTop="26dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toBottomOf="@id/roundedProfileImageView"
-        app:layout_constraintStart_toEndOf="@id/txt_nickname"/>
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <TextView
-        android:id="@+id/text_bio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_bio"
-        android:layout_marginTop="35dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:padding="20dp"
-        android:textColor="@color/gris_claro"
-        android:textSize="11sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_nickname"
-        tools:text="biografia" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/cajaInvertida"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:src="@drawable/rounded_list_data"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/separador" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/roundedProfileImageView"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
 
-    <ImageView
-        android:id="@+id/separador"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:background="@color/azul"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_bio" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/circular" />
 
-    <TextView
-        android:id="@+id/txt_playing"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Playing"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="12sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/cajaInvertida"
-        app:layout_constraintTop_toBottomOf="@+id/separador"
-        app:layout_constraintEnd_toStartOf="@id/txt_completed"/>
+            <TextView
+                android:id="@+id/txt_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:maxLines="1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/roundedProfileImageView"
+                tools:text="Nickname"/>
+            <ImageView
+                android:id="@+id/icon_editNickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_edit_square"
+                android:layout_marginTop="26dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintTop_toBottomOf="@id/roundedProfileImageView"
+                app:layout_constraintStart_toEndOf="@id/txt_nickname"/>
 
-    <TextView
-        android:id="@+id/txt_completed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Completed"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="12sp"
-        android:layout_marginTop="10dp"
+            <TextView
+                android:id="@+id/text_bio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_bio"
+                android:layout_marginTop="35dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:padding="20dp"
+                android:textColor="@color/gris_claro"
+                android:textSize="11sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_nickname"
+                tools:text="biografia" />
 
-        app:layout_constraintStart_toEndOf="@+id/txt_playing"
-        app:layout_constraintTop_toBottomOf="@+id/separador"
-        app:layout_constraintEnd_toStartOf="@id/txt_dropped"/>
+            <ImageView
+                android:id="@+id/cajaInvertida"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:src="@drawable/rounded_list_data"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/separador" />
 
-    <TextView
-        android:id="@+id/txt_dropped"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dropped"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="12sp"
-        android:layout_marginTop="10dp"
+            <ImageView
+                android:id="@+id/separador"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/azul"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_bio" />
 
-        app:layout_constraintStart_toEndOf="@+id/txt_completed"
-        app:layout_constraintTop_toBottomOf="@+id/separador"
-        app:layout_constraintEnd_toStartOf="@id/txt_wishlist"/>
+            <TextView
+                android:id="@+id/txt_playing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Playing"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toStartOf="@+id/cajaInvertida"
+                app:layout_constraintTop_toBottomOf="@+id/separador"
+                app:layout_constraintEnd_toStartOf="@id/txt_completed"/>
 
-    <TextView
-        android:id="@+id/txt_wishlist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Wishlist"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="12sp"
-        android:layout_marginTop="10dp"
+            <TextView
+                android:id="@+id/txt_completed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Completed"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:layout_marginTop="10dp"
 
-        app:layout_constraintStart_toEndOf="@+id/txt_dropped"
-        app:layout_constraintTop_toBottomOf="@+id/separador"
-        app:layout_constraintEnd_toEndOf="@id/cajaInvertida"/>
+                app:layout_constraintStart_toEndOf="@+id/txt_playing"
+                app:layout_constraintTop_toBottomOf="@+id/separador"
+                app:layout_constraintEnd_toStartOf="@id/txt_dropped"/>
 
-    <TextView
-        android:id="@+id/txt_numPlaying"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/gris_claro"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/txt_playing"
-        app:layout_constraintStart_toStartOf="@+id/txt_playing"
-        app:layout_constraintTop_toBottomOf="@+id/txt_playing" />
+            <TextView
+                android:id="@+id/txt_dropped"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dropped"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:layout_marginTop="10dp"
 
-    <TextView
-        android:id="@+id/txt_numCompleted"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+                app:layout_constraintStart_toEndOf="@+id/txt_completed"
+                app:layout_constraintTop_toBottomOf="@+id/separador"
+                app:layout_constraintEnd_toStartOf="@id/txt_wishlist"/>
 
-        android:textColor="@color/gris_claro"
-        android:textSize="12sp"
-        android:textStyle="bold"
+            <TextView
+                android:id="@+id/txt_wishlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Wishlist"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:layout_marginTop="10dp"
 
-        app:layout_constraintEnd_toEndOf="@+id/txt_completed"
-        app:layout_constraintStart_toStartOf="@+id/txt_completed"
-        app:layout_constraintTop_toBottomOf="@+id/txt_completed" />
+                app:layout_constraintStart_toEndOf="@+id/txt_dropped"
+                app:layout_constraintTop_toBottomOf="@+id/separador"
+                app:layout_constraintEnd_toEndOf="@id/cajaInvertida"/>
 
-    <TextView
-        android:id="@+id/txt_numDropped"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/gris_claro"
-        android:textSize="12sp"
-        android:textStyle="bold"
+            <TextView
+                android:id="@+id/txt_numPlaying"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/gris_claro"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/txt_playing"
+                app:layout_constraintStart_toStartOf="@+id/txt_playing"
+                app:layout_constraintTop_toBottomOf="@+id/txt_playing" />
 
-        app:layout_constraintEnd_toEndOf="@+id/txt_dropped"
-        app:layout_constraintStart_toStartOf="@+id/txt_dropped"
-        app:layout_constraintTop_toBottomOf="@+id/txt_dropped" />
+            <TextView
+                android:id="@+id/txt_numCompleted"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
 
-    <TextView
-        android:id="@+id/txt_numWishlist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/gris_claro"
-        android:textSize="12sp"
-        android:textStyle="bold"
+                android:textColor="@color/gris_claro"
+                android:textSize="12sp"
+                android:textStyle="bold"
 
-        app:layout_constraintEnd_toEndOf="@+id/txt_wishlist"
-        app:layout_constraintStart_toStartOf="@+id/txt_wishlist"
-        app:layout_constraintTop_toBottomOf="@+id/txt_wishlist" />
+                app:layout_constraintEnd_toEndOf="@+id/txt_completed"
+                app:layout_constraintStart_toStartOf="@+id/txt_completed"
+                app:layout_constraintTop_toBottomOf="@+id/txt_completed" />
+
+            <TextView
+                android:id="@+id/txt_numDropped"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/gris_claro"
+                android:textSize="12sp"
+                android:textStyle="bold"
+
+                app:layout_constraintEnd_toEndOf="@+id/txt_dropped"
+                app:layout_constraintStart_toStartOf="@+id/txt_dropped"
+                app:layout_constraintTop_toBottomOf="@+id/txt_dropped" />
+
+            <TextView
+                android:id="@+id/txt_numWishlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/gris_claro"
+                android:textSize="12sp"
+                android:textStyle="bold"
+
+                app:layout_constraintEnd_toEndOf="@+id/txt_wishlist"
+                app:layout_constraintStart_toStartOf="@+id/txt_wishlist"
+                app:layout_constraintTop_toBottomOf="@+id/txt_wishlist" />
+
+            <TextView
+                android:id="@+id/txt_titlefavs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Favorites"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/cajaInvertida"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:layout_marginStart="10dp"
+                android:src="@drawable/icon_favorite"
+                app:layout_constraintStart_toEndOf="@id/txt_titlefavs"
+                app:layout_constraintTop_toBottomOf="@id/cajaInvertida"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerFavs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/txt_titlefavs"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
+
+
 
 
 
