--- a/app/src/main/res/drawable/button_background_default.xml
+++ b/app/src/main/res/drawable/button_background_default.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle"
     >
     <corners android:radius="500dp"/>
-    <solid android:color="@color/background"/>
+    <solid android:color="@color/morado_interfaz"/>
 
 </shape>
